added small screen score

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <i class="fas fa-undo rotate-left"></i>
             <i class="fas fa-sync rotate-right"></i>
             </div>
+            <div class='small-screen-score'>TETRIS Score:<span class='small-screen-score-span'></span></div>
     </div>
 
 
